# marco

./: .build.yml  .travis.yml  AUTHORS  CNAME  COPYING  ChangeLog  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  configure.in  index.html  issue_template.md  makepot  marco.pot  meson.build  meson_options.txt  meson_post_install.py  rationales.txt
.tx/: config
2024-02-02-232844-2226-cppcheck@84be1dc64ffe_v1.27.1/: 24.html  32.html  61.html  71.html  73.html  84.html
2024-02-02-232917-7063-cppcheck@84be1dc64ffe_master/: 29.html  31.html  60.html  8.html  stats.html
2024-02-02-233255-1625-cppcheck@84be1dc64ffe_v1.27.1/: 105.html  21.html  82.html  88.html
2024-02-14-010151-12744-1@c6fb9cc87bec_master/: index.html  report-009c20.html  report-064f1f.html  report-071a16.html  report-19e9c7.html  report-2430c2.html  report-29575a.html  report-3ed76c.html  report-3eecf0.html  report-58a7de.html  report-641a36.html  report-658c39.html  report-6885b9.html  report-6a7c12.html  report-6ce2b4.html  report-6de546.html  report-79e718.html  report-82159e.html  report-857384.html  report-894891.html  report-b7dd8c.html  report-c5605e.html  report-d1db2e.html  report-dac1a9.html  report-e47d9e.html  report-e9815c.html  report-ec6e93.html  report-ed0075.html  report-ef49e8.html  report-f74df1.html
2024-02-14-011017-6196-cppcheck@c6fb9cc87bec_master/: 1.html  12.html  15.html  19.html  23.html  41.html  53.html
2024-02-14-011429-9355-cppcheck@c6fb9cc87bec_master/: 16.html  39.html  50.html  58.html  85.html  93.html
2024-02-14-150754-12739-1@b21f74844066_master@b21f74844066_master/: index.html  report-009c20.html  report-064f1f.html  report-071a16.html  report-19e9c7.html  report-2430c2.html  report-29575a.html  report-3ed76c.html  report-3eecf0.html  report-58a7de.html  report-641a36.html  report-658c39.html  report-6885b9.html  report-6a7c12.html  report-6ce2b4.html  report-6de546.html  report-79e718.html  report-82159e.html  report-857384.html  report-894891.html  report-b7dd8c.html  report-c5605e.html  report-d1db2e.html  report-dac1a9.html  report-e47d9e.html  report-e9815c.html  report-ec6e93.html  report-ed0075.html  report-ef49e8.html  report-f74df1.html
2024-02-14-151636-6271-cppcheck@b21f74844066_master/: 51.html  94.html
2024-02-14-152056-3279-cppcheck@b21f74844066_master/: 102.html  64.html  95.html  97.html
2024-02-16-205552-12746-1@7c3a54e7ce0f_master@7c3a54e7ce0f_master/: index.html  report-009c20.html  report-064f1f.html  report-071a16.html  report-19e9c7.html  report-2430c2.html  report-29575a.html  report-3ed76c.html  report-3eecf0.html  report-58a7de.html  report-641a36.html  report-658c39.html  report-6885b9.html  report-6a7c12.html  report-6ce2b4.html  report-6de546.html  report-79e718.html  report-82159e.html  report-857384.html  report-894891.html  report-b7dd8c.html  report-c5605e.html  report-d1db2e.html  report-dac1a9.html  report-e47d9e.html  report-e9815c.html  report-ec6e93.html  report-ed0075.html  report-ef49e8.html  report-f74df1.html
2024-02-16-210834-2034-cppcheck@7c3a54e7ce0f_master/: 0.html  66.html
doc/creating_themes/: Makefile.am  Makefile.in  meson.build
doc/creating_themes/C/: creating-marco-themes.xml
src/: 50-marco-desktop-key.xml.in  50-marco-global-key.xml.in  50-marco-key.xml.in  50-marco-window-key.xml.in  Makefile.am  gdk-compat.h  libmarco-private.pc.in  marco-wm.desktop.in  marco.convert  marco.desktop.in  marco.schemas.in.in  meson.build  org.mate.marco.gschema.xml
src/compositor/: compositor-private.h  compositor-xrender.c  compositor-xrender.h  compositor.c
src/core/: async-getprop.c  async-getprop.h  atomnames.h  bell.c  bell.h  boxes.c  common.c  constraints.c  constraints.h  core.c  delete.c  display-private.h  display.c  edge-resistance.c  edge-resistance.h  effects.c  effects.h  errors.c  eventqueue.c  eventqueue.h  frame-private.h  frame.c  group-private.h  group-props.c  group-props.h  group.c  group.h  iconcache.c  iconcache.h  keybindings.c  keybindings.h  main.c  marco-Xatomtype.h  place.c  place.h  prefs.c  schema-bindings.c  screen-private.h  screen.c  session.c  (+13 more)
src/include/: all-keybindings.h  boxes.h  common.h  compositor.h  core.h  display.h  errors.h  frame.h  main.h  prefs.h  resizepopup.h  screen.h  tabpopup.h  tile-preview.h  types.h  ui.h  util.h  window.h  xprops.h
src/themes/: Makefile.am  meson.build
src/themes/Atlanta/: meson.build  metacity-theme-1.xml
src/themes/ClearlooksRe/: meson.build  metacity-theme-1.xml
src/themes/Dopple/: meson.build  metacity-theme-1.xml
src/themes/Dopple-Left/: meson.build  metacity-theme-1.xml
src/themes/DustBlue/: meson.build  metacity-theme-1.xml
src/themes/Esco/: meson.build
src/themes/Gorilla/: README  meson.build
src/themes/Motif/: meson.build  metacity-theme-1.xml
src/themes/Raleigh/: meson.build  metacity-theme-1.xml
src/themes/Simple/: metacity-theme-1.xml
src/themes/Spidey/: meson.build  metacity-theme-1.xml
src/themes/Spidey-Left/: meson.build  metacity-theme-1.xml
src/themes/Splint/: meson.build  metacity-theme-1.xml
src/themes/Splint-Left/: meson.build  metacity-theme-1.xml
src/themes/WinMe/: meson.build  metacity-theme-1.xml
src/themes/eOS/: meson.build  metacity-theme-1.xml  metacity-theme-3.xml  trough_left.xcf  trough_left_unfocused.xcf  trough_right.xcf  trough_right_unfocused.xcf  trough_single.xcf  trough_single_unfocused.xcf
src/tools/: Makefile.am  marco-grayscale.c  marco-mag.c  marco-message.c  marco-window-demo.c  meson.build
src/ui/: draw-workspace.c  draw-workspace.h  fixedtip.c  fixedtip.h  frames.c  frames.h  gradient.c  gradient.h  menu.c  menu.h  metaaccellabel.c  metaaccellabel.h  preview-widget.c  preview-widget.h  resizepopup.c  tabpopup.c  testgradient.c  theme-parser.c  theme-parser.h  theme-viewer.c  theme.c  theme.h  themewidget.c  themewidget.h  tile-preview.c  ui.c
src/wm-tester/: Makefile.am  Makefile.in  focus-window.c  main.c  meson.build  test-gravity.c  test-resizing.c  test-size-hints.c
(+635 files in other folders)
